# trigr-tauri

./: .gitignore  CLAUDE.md  TRIGR_CONTEXT.md  TRIGR_TAURI_CONTEXT.md  index.html  latest.json  latest.json.template  netlify.toml  package-lock.json  package.json  vite.config.js
.claude/commands/: release.md  trigr-bug-review.md  trigr-cc-estimate.md  trigr-document-style.md  trigr-reddit-post.md  trigr-release-notes.md
.github/workflows/: cache-warm.yml  release.yml
docs/: index.html  index_old.html  trigr-alpha-tester-guide.html  trigr-help.html
public/: fonts.css  help.html  keyforge-help.html
src/: App.jsx  main.jsx  tauriAPI.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: actions.rs  analytics.rs  clipboard.rs  config.rs  expansions.rs  foreground.rs  hotkeys.rs  lib.rs  licence.rs  main.rs  tray.rs
src/components/: AnalyticsPanel.css  AnalyticsPanel.jsx  ClipboardOverlay.css  ClipboardOverlay.jsx  ClipboardPanel.css  ClipboardPanel.jsx  FillInModal.css  FillInModal.jsx  FillInWindow.css  FillInWindow.jsx  KeyboardCanvas.css  KeyboardCanvas.jsx  MacroPanel.css  MacroPanel.jsx  MouseCanvas.css  MouseCanvas.jsx  NumpadCanvas.css  NumpadCanvas.jsx  OnboardingTour.css  OnboardingTour.jsx  QuickTips.css  QuickTips.jsx  SearchOverlay.css  SearchOverlay.jsx  SearchTemplatesPanel.css  SearchTemplatesPanel.jsx  SettingsPanel.css  SettingsPanel.jsx  Sidebar.css  Sidebar.jsx  StatusBar.css  StatusBar.jsx  TemplatesPanel.css  TemplatesPanel.jsx  TextExpansions.css  TextExpansions.jsx  TitleBar.css  TitleBar.jsx  WelcomeModal.css  WelcomeModal.jsx  (+3 more)
src/styles/: app.css  global.css
