[package]
name = "trigr"
version = "0.1.0"
description = "Visual Hotkey & Macro Manager"
authors = ["Trigr"]
edition = "2021"

[lib]
name = "trigr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = { version = "2", features = ["rustls-tls"] }
tauri-plugin-process = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = "0.4"
regex-lite = "0.1"
opener = "0.7"
png = "0.17"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
